<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidDemo</string>
    <string name="action_settings">Settings</string>
    <string name="btn_main_start_personlist">Start PersonList</string>
    <string name="btn_main_start_locationlist">Start Locationlist</string>
    <string name="btn_main_start_basicanim">Start BasicAnim</string>
    <string name="btn_main_start_stopwatch">Start StopWatch</string>
    <string name="btn_main_start_musicplayer">Start MusicPlayer</string>
    
    <string name="personlist_listitem_name"></string>
    <string name="personlist_listitem_age"></string>
    <string name="personlist_listitem_sex"></string>
    
    <string name="locationlist_listitem_title">title</string>
    <string name="locationlist_listitem_description">description</string>
    
    <string name="btn_basicanim_X_move">X轴平移</string>
    <string name="btn_basicanim_Y_move">Y轴平移</string>
    <string name="btn_basicanim_X_rotate">X轴旋转</string>
    <string name="btn_basicanim_Y_rotate">Y轴旋转</string>
    <string name="btn_basicanim_X_scale">X轴缩放</string>
    <string name="btn_basicanim_Y_scale">Y轴缩放</string>
    
    <string name="btn_stopwatch_start">开始</string>
    <string name="btn_stopwatch_pause">暂停</string>
    <string name="btn_stopwatch_reset">重置</string>
    <string name="btn_stopwatch_count">计次</string>
    
    <string name="btn_musicplayer_startservice">开始播放</string>
    <string name="btn_musicplayer_stopservice">停止播放</string>

</resources>
