<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button 
        android:id="@+id/btn_main_start_personlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_start_personlist"/>
    <Button 
        android:id="@+id/btn_main_start_locationlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_start_locationlist"/>
    <Button 
        android:id="@+id/btn_main_start_basicanim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_start_basicanim"/>
    <Button 
        android:id="@+id/btn_main_start_stopwatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_start_stopwatch"/>
    <Button 
        android:id="@+id/btn_main_start_musicplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_start_musicplayer"/>
    
</LinearLayout>

