<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<ImageView 
	    android:id="@+id/imageview_basicanim_display"
	    android:layout_width="150dp"
	    android:layout_height="200dp"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="20dp"
	    android:contentDescription="@string/app_name"
	    android:scaleType="fitXY"
	    android:src="@drawable/basicanim_display"
	    />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal">
	    <Button 
	        android:id="@+id/btn_basicanim_X_move"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/btn_basicanim_X_move"/>
	    <Button 
	        android:id="@+id/btn_basicanim_Y_move"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/btn_basicanim_Y_move"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal">
	    <Button 
	        android:id="@+id/btn_basicanim_X_rotate"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/btn_basicanim_X_rotate"/>
	    <Button 
	        android:id="@+id/btn_basicanim_Y_rotate"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/btn_basicanim_Y_rotate"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal">
	    <Button 
	        android:id="@+id/btn_basicanim_X_scale"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/btn_basicanim_X_scale"/>
	    <Button 
	        android:id="@+id/btn_basicanim_Y_scale"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/btn_basicanim_Y_scale"/>
	</LinearLayout>
</LinearLayout>